--- a/server/model-config.json
+++ b/server/model-config.json
@@ -70,5 +70,9 @@
   "Pago": {
     "dataSource": "mongo-dev",
     "public": true
+  },
+  "Transaccion": {
+    "dataSource": "mongo-dev",
+    "public": true
   }
 }
